update language
format

fix merge conflict